syntax = "proto3";

import "google/protobuf/any.proto";
package rpc;

//事件溯源,得到聚合
service Sourcing {
    //发起事件溯源,得到聚合对象,用来作为 命令处理的聚合
    rpc Sourcing (SourcingRequest) returns (SourcingResponse) {

    }
}
//溯源请求
message SourcingRequest {
    string aggId = 1;
    string aggType = 2;
}
///溯源返回
message SourcingResponse {
    string aggId = 1;
    string aggType = 2;
    int32 version = 3;
    google.protobuf.Any data = 4;
}